@@ -17,6 +17,8 @@ public:
 
 	void Explosion(const float3& pos, float strength, float radius);
 	void RecalcArea(int x1, int x2, int y1, int y2);
+	void TerrainTypeHardnessChanged(int ttIndex) override;
+	void TerrainTypeSpeedModChanged(int ttIndex) override;
 	void Update();
 
 private:
